fixed some spacing

--- a/stevens-college/styles.css
+++ b/stevens-college/styles.css
@@ -5,7 +5,7 @@ h1 {
   padding:0;
   border:0;
   width:100%;
-  font-size:4.2em;
+  font-size:7.5em;
 }
 img {
   width:100%;
